<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".Activities.LoginActivity">

    <TextView
        android:id="@+id/textView_id_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:fontFamily="@font/amita_bold"
        android:text="@string/Login_screen_app_name"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold"></TextView>

    <TextView
        android:id="@+id/textView_id_login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_id_app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/Login_screen_login_text"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"></TextView>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_editText_id_UserName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_id_login_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        app:errorEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInput_editText_id_UserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Login_screen_user_name_hint">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInnputLayout_editText_id_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textInputLayout_editText_id_UserName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:hint="@string/Login_screen_password_hint"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInput_editText_id_Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInnputLayout_editText_id_password"
        android:layout_alignParentRight="true"
        android:text="@string/Login_screen_Forgot_Password"
        android:textColor="@color/black"
        android:textSize="12dp"
        android:textStyle="bold"
        android:visibility="invisible">
    </TextView>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_id_Login"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textInnputLayout_editText_id_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/Login_screen_button_text"
        android:background="@drawable/login_button_style"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:focusable="false"
        >
    </androidx.appcompat.widget.AppCompatButton>

    <TextView
        android:id="@+id/textView_id_register_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_id_Login"
        android:layout_alignStart="@+id/button_id_Login"
        android:layout_marginTop="20dp"
        android:text="@string/Login_screen_register_here"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:textStyle="bold"></TextView>

    <TextView
        android:id="@+id/textView_id_forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView_id_register_here"
        android:text="@string/Login_screen_Forgot_Password"
        android:layout_alignEnd="@+id/button_id_Login"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:textStyle="bold"></TextView>
</RelativeLayout>