<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp">
    <ImageView
        android:id="@+id/finger_print_image_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:foregroundGravity="center"
        android:src="@drawable/ic_finger_print_scan_item">
    </ImageView>
    <TextView
        android:id="@+id/deviceName_textView_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/finger_print_image_id"
        android:text="@string/FRAGMET_SCAN_DEVICE_ALIAS_NAME"
        android:textColor="@color/black"
        android:textStyle="bold">
    </TextView>
    <TextView
        android:id="@+id/device_bleAddress_textView_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FRAGMET_SCAN_DEVICE_BLE_ADDRESS"
        android:textColor="@color/black"
        android:layout_marginTop="45dp"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/finger_print_image_id"
        android:layout_below="@+id/deviceName_textView_id">
    </TextView>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/connect_disconnect_button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FRAGMET_SCAN_DEVICE_CONNECT"
        android:background="@drawable/scan_button_background"
        android:layout_alignParentRight="true"
        android:textAllCaps="false"
        android:textColor="@color/connect_text_color"
        android:layout_marginTop="40dp"
        android:layout_marginRight="25dp"
        >
    </androidx.appcompat.widget.AppCompatButton>
</RelativeLayout>