<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.RegistrationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/textView_registration_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:text="@string/Registration_screen_header"
                android:textAlignment="center"
                android:theme="@style/HeaderText"></TextView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/frist_name_textInputLayout_id"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView_registration_header"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:hint="@string/Registration_screen_FristName"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/frist_name_textInput_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"></com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/last_name_textInputLayout_id"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/frist_name_textInputLayout_id"
                android:layout_centerHorizontal="true"
                android:hint="@string/Registration_screen_LastName"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/last_name_textInput_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"></com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mobileNumber_textInputLayout_id"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/last_name_textInputLayout_id"
                android:layout_centerHorizontal="true"
                android:hint="@string/Registration_screen_mobile"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/mobileNumber_textInput_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"></com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_textInputLayout_id"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mobileNumber_textInputLayout_id"
                android:layout_centerHorizontal="true"
                android:hint="@string/Registration_screen_PassWord"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_textInput_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"></com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/conferm_password_textInputLayout_id"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password_textInputLayout_id"
                android:layout_centerHorizontal="true"
                android:hint="@string/Registration_screen_ConFermPassWord"
                app:errorEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/conferm_password_textInput_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/registration_button"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/conferm_password_textInputLayout_id"
                android:background="@drawable/login_button_style"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"
                android:text="@string/Registration_screen_registerr">
            </androidx.appcompat.widget.AppCompatButton>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>