<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools">
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="20dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/scan_backgroud_gradient"
            >
            <ImageView
                android:id="@+id/finger_print_image_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"

                android:layout_marginBottom="20dp"
                android:foregroundGravity="center"
                android:src="@drawable/ic_finger_print_scan_item">
            </ImageView>
            <TextView
                android:id="@+id/deviceName_textView_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_alignTop="@+id/finger_print_image_id"
                android:layout_toRightOf="@+id/finger_print_image_id"
                android:text="@string/FRAGMET_SCAN_DEVICE_ALIAS_NAME"
                android:textColor="@color/scan_item_textcolor"
                android:textSize="15dp"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:id="@+id/device_bleAddress_textView_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/FRAGMET_SCAN_DEVICE_BLE_ADDRESS"
                android:textColor="@color/scan_item_textcolor"
                android:textStyle="bold"
                android:textSize="10dp"
                android:layout_marginTop="5dp"
                android:layout_alignLeft="@+id/deviceName_textView_id"
                android:layout_below="@+id/deviceName_textView_id"
                android:layout_toRightOf="@+id/finger_print_image_id"
                >
            </TextView>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/connect_disconnect_button_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/FRAGMET_SCAN_DEVICE_CONNECT"
                android:background="@drawable/scan_button_background"
                android:layout_alignParentRight="true"
                android:textAllCaps="false"
                android:textColor="@color/scan_item_textcolor"
                android:layout_alignBottom="@+id/finger_print_image_id"
                android:layout_marginRight="25dp"
                >
            </androidx.appcompat.widget.AppCompatButton>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>